Fix SignIn Page overflow

--- a/src/renderer/client/common/styles/form/Form.scss
+++ b/src/renderer/client/common/styles/form/Form.scss
@@ -1,10 +1,9 @@
 @import '../utils';
 .Form {
-  padding: 20px 10px;
   min-height: 200px;
   min-width: 160px;
   &-container {
-    min-height: 500px;
+    max-height: 400px;
   }
   &-title {
     margin-bottom: 10px;
@@ -14,5 +13,8 @@
       margin-bottom: 5px;
       font-size: pxToRem(16);
     }
+  }
+  &-buttonWrapper {
+    margin-top: 5px;
   }
 }
