--- a/src/renderer/client/components/form/SignInForm/SignInForm.scss
+++ b/src/renderer/client/components/form/SignInForm/SignInForm.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 500px;
+  max-height: 400px;
   &-fieldsWrapper {
     display: flex;
     flex-direction: column;
